# git-pulse

./: .gitignore  .prettierignore  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.eslint.json  vite.config.ts
.github/workflows/: deploy.yml
backend/: pyproject.toml  test_webhook.py
backend/app/: config.py  main.py  schemas.py  security.py
backend/git_pulse_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .prettierrc  .stylelintignore  .stylelintrc.json  bundle-report.html  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/dashboard/: DashboardShell.tsx  RepoList.tsx  index.ts  queries.ts
frontend/src/components/onboarding/: Onboarding.tsx
frontend/src/components/ui/: TokenInput.tsx  alert-dialog.tsx  (+2 more)
frontend/src/hooks/: usePulseSocket.ts
frontend/src/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/lib/: client.ts
frontend/src/pages/: DashboardPage.tsx  FeedPage.tsx  LoginPage.tsx
frontend/src/router/: AuthGuard.tsx  routes.tsx
frontend/src/services/: socket.ts
git_pulse_backend.egg-info/: PKG-INFO  requires.txt
src/: App.tsx  index.css
src/components/: TokenInput.tsx
src/components/dashboard/: Dashboard.tsx  DashboardShell.tsx  RepoCard.tsx  RepoList.tsx  UserProfile.tsx  index.ts  queries.ts
src/components/onboarding/: Onboarding.tsx
src/components/ui/: TokenInput.tsx
src/graphql/: client.ts
(+22 files in other folders)
