[project]
name = "git-pulse-backend"
version = "0.1.0"
description = "Real-time GitHub Event Ingestion Engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "tabulate>=0.9.0",
    "anyio>=4.12.1",
    "click>=8.3.1",
    "python-dotenv>=1.2.1",
    "cryptography>=42.0.0", # Required for HMAC Verification
    "httpx>=0.27.0",       # For server-to-server calls
    "python-socketio>=5.11.0",
    "python-engineio>=4.11.0"
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "ANN", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true